--- a/src/ViveCortelazor/Resources/Views/Home/History.en.resx
+++ b/src/ViveCortelazor/Resources/Views/Home/History.en.resx
@@ -159,7 +159,7 @@ Another symbol of the town is its **centennial elm**, where town council meeting
 
 ### Cortelazor Today
 
-Today, [**Cortelazor la Real**](/en) maintains its traditional essence and natural beauty, attracting visitors seeking tranquility and contact with nature. Its privileged location makes it an ideal destination for hiking and rural tourism. Its economy remains based on livestock farming and tourism, solidifying its status as a hidden treasure in the Sierra de Huelva.
+Today, [**Cortelazor la Real**](/en) maintains its traditional essence and natural beauty, attracting visitors seeking tranquility and contact with nature. Its privileged location makes it an ideal destination for [**hiking**](/en/hiking) and rural tourism. Its economy remains based on livestock farming and tourism, solidifying its status as a hidden treasure in the Sierra de Huelva.
 
 With a fascinating historical legacy and an unparalleled environment, [**Cortelazor la Real**](/en) continues to be an essential destination for those wishing to experience authentic life in the Sierra de Aracena.</value>
   </data>
