--- a/src/ViveCortelazor/Resources/Views/Home/History.es.resx
+++ b/src/ViveCortelazor/Resources/Views/Home/History.es.resx
@@ -159,7 +159,7 @@ Otro símbolo del pueblo es su **olmo centenario**, donde antiguamente se celebr
 
 ### Cortelazor en la actualidad
 
-Hoy en día, [**Cortelazor la Real**](/es) mantiene su esencia tradicional y su belleza natural, atrayendo a visitantes que buscan tranquilidad y contacto con la naturaleza. Su ubicación privilegiada lo convierte en un destino ideal para el senderismo y el turismo rural. Su economía sigue basándose en la ganadería y el turismo, consolidándose como un tesoro escondido en la Sierra de Huelva.
+Hoy en día, [**Cortelazor la Real**](/es) mantiene su esencia tradicional y su belleza natural, atrayendo a visitantes que buscan tranquilidad y contacto con la naturaleza. Su ubicación privilegiada lo convierte en un destino ideal para el [**senderismo**](/es/senderismo) y el turismo rural. Su economía sigue basándose en la ganadería y el turismo, consolidándose como un tesoro escondido en la Sierra de Huelva.
 
 Con un legado histórico fascinante y un entorno inigualable, [**Cortelazor la Real**](/es) sigue siendo un destino imprescindible para quienes desean conocer la auténtica vida en la Sierra de Aracena.</value>
   </data>
