--- a/src/ViveCortelazor/Resources/Views/Home/Index.es.resx
+++ b/src/ViveCortelazor/Resources/Views/Home/Index.es.resx
@@ -130,7 +130,7 @@
     <value>Bienvenido a [**Vive Cortelazor**](/es), el lugar donde encontrarás toda la información sobre [**Cortelazor la Real**](/es), un pintoresco pueblo de la **Sierra de Aracena y Picos de Aroche**, en pleno Parque Natural. Rodeado de frondosos bosques de encinas y alcornoques, este destino es ideal para quienes buscan tranquilidad, naturaleza y tradición.</value>
   </data>
   <data name="Introduction2" xml:space="preserve">
-    <value>Paseando por sus calles empedradas, descubrirás la esencia de la arquitectura serrana, con casas blancas que contrastan con el verde de los campos que la rodean. La riqueza patrimonial de [**Cortelazor**](/es) se refleja en su **iglesia del siglo XVIII**, en sus antiguas fuentes y lavaderos, y en las numerosas **rutas de senderismo** que conectan el pueblo con otros rincones de la sierra.</value>
+    <value>Paseando por sus calles empedradas, descubrirás la esencia de la arquitectura serrana, con casas blancas que contrastan con el verde de los campos que la rodean. La riqueza patrimonial de [**Cortelazor**](/es) se refleja en su **iglesia del siglo XVIII**, en sus antiguas fuentes y lavaderos, y en las numerosas [**rutas de senderismo**](/es/senderismo) que conectan el pueblo con otros rincones de la sierra.</value>
   </data>
   <data name="Introduction3" xml:space="preserve">
     <value>Además de su belleza natural, [**Cortelazor**](/es) es un lugar donde la **gastronomía tradicional** juega un papel fundamental. Los productos derivados del **cerdo ibérico, la miel, los quesos artesanales y los guisos serranos** son solo algunas de las delicias que podrás disfrutar en sus mesones y bares.
