--- a/src/ViveCortelazor/Resources/Views/Home/WhatToDo.en.resx
+++ b/src/ViveCortelazor/Resources/Views/Home/WhatToDo.en.resx
@@ -148,7 +148,7 @@
 
 ## Hiking
 
-[**Cortelazor**](/en) is an ideal starting point for hiking enthusiasts. Its trails wind through meadows, forests, and mountainous landscapes, offering a unique experience for those seeking to connect with nature. Among its trails, the **Charco Malo Route** stands out, leading you to a spectacular **natural pool**. Along the way, you will enjoy a beautiful landscape surrounded by native vegetation.
+[**Cortelazor**](/en) is an ideal starting point for [**hiking**](/en/hiking) enthusiasts. Its trails wind through meadows, forests, and mountainous landscapes, offering a unique experience for those seeking to connect with nature. Among its trails, the [**Charco Malo Route**](/en/hiking#charco-malo) stands out, leading you to a spectacular **natural pool**. Along the way, you will enjoy a beautiful landscape surrounded by native vegetation.
 
 ![Cortelazor la Real](/images/what-to-do/charco-malo.jpg)
 
