--- a/src/ViveCortelazor/Resources/Views/Home/WhatToDo.es.resx
+++ b/src/ViveCortelazor/Resources/Views/Home/WhatToDo.es.resx
@@ -148,7 +148,7 @@
 
 ## Senderismo
 
-[**Cortelazor**](/es) es un punto de partida ideal para los amantes del senderismo. Sus senderos serpentean a través de dehesas, bosques y paisajes montañosos, ofreciendo una experiencia única para quienes buscan conectar con la naturaleza. Entre sus rutas destaca la **Ruta del Charco Malo**, sendero que te llevará hasta una espectacular **poza natural**. Durante el recorrido, podrás disfrutar de un hermoso paisaje rodeado de vegetación autóctona.
+[**Cortelazor**](/es) es un punto de partida ideal para los amantes del [**senderismo**](/es/senderismo). Sus senderos serpentean a través de dehesas, bosques y paisajes montañosos, ofreciendo una experiencia única para quienes buscan conectar con la naturaleza. Entre sus rutas destaca la [**Ruta del Charco Malo**](/es/senderismo#charco-malo), sendero que te llevará hasta una espectacular **poza natural**. Durante el recorrido, podrás disfrutar de un hermoso paisaje rodeado de vegetación autóctona.
 
 ![Cortelazor la Real](/images/what-to-do/charco-malo.jpg)
 
