--- a/src/ViveCortelazor/Resources/Views/Home/Hiking.en.resx
+++ b/src/ViveCortelazor/Resources/Views/Home/Hiking.en.resx
@@ -117,33 +117,34 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Cortelazor Streets" xml:space="preserve">
-    <value>Cortelazor Streets</value>
-  </data>
-  <data name="Cortelazor Trees" xml:space="preserve">
-    <value>Cortelazor Trees</value>
-  </data>
   <data name="Description" xml:space="preserve">
-    <value>Welcome to Vive Cortelazor, where you can find information about the charming village of Cortelazor la Real, located in the heart of the Sierra de Aracena. Enjoy its unique nature, history, and gastronomy.</value>
+    <value>Discover the best hiking trails in Cortelazor la Real, in the heart of the Sierra de Aracena. Explore unique paths like the Charco Malo Route, a spectacular trail through forests and streams. Nature, adventure, and unforgettable landscapes await you.</value>
   </data>
-  <data name="Introduction1" xml:space="preserve">
-    <value>Welcome to [**Vive Cortelazor**](/en), the place where you'll find all the information about [**Cortelazor la Real**](/en), a picturesque village in the **Sierra de Aracena and Picos de Aroche**, in the heart of the Natural Park. Surrounded by lush forests of holm oaks and cork trees, this destination is ideal for those seeking tranquility, nature, and tradition.</value>
+  <data name="Hiking" xml:space="preserve">
+    <value>Hiking</value>
   </data>
-  <data name="Introduction2" xml:space="preserve">
-    <value>Walking through its cobbled streets, you'll discover the essence of mountain architecture, with white houses that contrast with the green of the surrounding fields. The rich heritage of [**Cortelazor**](/en) is reflected in its **18th-century church**, its ancient fountains and washing places, and the numerous [**hiking trails**](/en/hiking) that connect the village with other corners of the sierra.</value>
-  </data>
-  <data name="Introduction3" xml:space="preserve">
-    <value>In addition to its natural beauty, [**Cortelazor**](/en) is a place where **traditional gastronomy** plays a fundamental role. Products derived from **Iberian pork, honey, artisanal cheeses, and mountain stews** are just some of the delicacies you can enjoy in its taverns and bars.
+  <data name="Hiking Text" xml:space="preserve">
+    <value># Hiking in Cortelazor
+---
 
-If you're looking for an authentic experience in contact with nature, [**history**](/en/history), and culture of the **Sierra de Aracena**, [**Vive Cortelazor**](/en) is your perfect guide to discover everything this wonderful village has to offer.</value>
+![Cortelazor la Real](/images/hiking/hiking.jpg)
+
+Cortelazor la Real, located in the heart of the Sierra de Aracena and Picos de Aroche Natural Park, is a perfect destination for hiking enthusiasts. Its trails wind through holm oak and cork oak forests, crystal-clear streams, and ancient cobbled paths that connect with the history and traditions of the area.
+
+
+
+One of the most popular routes is the Charco Malo Route, which leads hikers to a stunning natural pool surrounded by lush vegetation. Whether you are an experienced hiker or just looking for a peaceful walk in nature, Cortelazor offers trails for all levels.
+
+![Cortelazor la Real](/images/hiking/charco-malo.jpg)
+
+
+
+And after a day of hiking, there’s nothing better than enjoying the delicious gastronomy of the Sierra de Aracena in one of Cortelazor’s local bars. Taste traditional dishes such as Iberian ham, local cheese, and seasonal mushrooms, paired with a fine wine or an ice-cold beer. The perfect way to end an unforgettable hiking experience!
+
+## Charco Malo
+a sdfasd fasdf asd fasd fasd fasd fasdf asd f</value>
   </data>
   <data name="Keywords" xml:space="preserve">
-    <value>Cortelazor la Real, Sierra de Aracena, Travel to Cortelazor, Villages of the Sierra de Aracena, Rural tourism in Cortelazor, Nature in Cortelazor, Hiking in the Sierra de Aracena, Gastronomy of Cortelazor, Historical heritage of Cortelazor, What to see in Cortelazor, Accommodation in Cortelazor, Culture of the Sierra de Aracena, Outdoor activities in Cortelazor, Hiking routes in the Sierra de Aracena, Hiking routes in Cortelazor, Huelva villages, Andalusia, Andalusia villages</value>
-  </data>
-  <data name="Title" xml:space="preserve">
-    <value>Discover Cortelazor la Real, a charming gem in the Sierra de Aracena</value>
-  </data>
-  <data name="Welcome" xml:space="preserve">
-    <value>Welcome</value>
+    <value>hiking in Cortelazor, hiking trails Sierra de Aracena, Charco Malo Cortelazor, hiking in Huelva, mountain trails Andalusia, Sierra de Aracena trails, nature in Cortelazor, hiking in the Sierra, walking routes Huelva, natural trails Cortelazor</value>
   </data>
 </root>
