--- a/src/ViveCortelazor/Resources/Views/Shared/_Layout.es.resx
+++ b/src/ViveCortelazor/Resources/Views/Shared/_Layout.es.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Hiking" xml:space="preserve">
+    <value>Senderismo</value>
+  </data>
   <data name="History" xml:space="preserve">
     <value>Historia</value>
   </data>
