Add hiking text #86

--- a/src/ViveCortelazor/Resources/Views/Home/Hiking.en.resx
+++ b/src/ViveCortelazor/Resources/Views/Home/Hiking.en.resx
@@ -129,20 +129,68 @@
 
 ![Cortelazor la Real](/images/hiking/hiking.jpg)
 
-Cortelazor la Real, located in the heart of the Sierra de Aracena and Picos de Aroche Natural Park, is a perfect destination for hiking enthusiasts. Its trails wind through holm oak and cork oak forests, crystal-clear streams, and ancient cobbled paths that connect with the history and traditions of the area.
+[**Cortelazor la Real**](/en), located in the heart of the **Sierra de Aracena and Picos de Aroche Natural Park**, is an ideal destination for **hiking** enthusiasts. Its trails wind through oak and cork forests, crystal-clear streams, and ancient cobblestone paths that connect with the [**history and tradition**](/en/history) of the area.
 
+Among its most outstanding routes, the [**Charco Malo Route**](/en/hiking#charco-malo) is one of the favorites, taking hikers to a **spectacular natural pool** surrounded by an environment of great beauty. Whether you're an experienced hiker or simply want to enjoy a walk in nature, in [**Cortelazor**](/en) you'll find routes for all levels.
 
-
-One of the most popular routes is the Charco Malo Route, which leads hikers to a stunning natural pool surrounded by lush vegetation. Whether you are an experienced hiker or just looking for a peaceful walk in nature, Cortelazor offers trails for all levels.
+And after a day of hiking, there's nothing better than regaining your strength by enjoying the exquisite **gastronomy** of the **Sierra de Aracena** in any of the bars in [**Cortelazor**](/en). Try traditional dishes such as **Iberian ham, mountain cheese, or seasonal mushrooms**, accompanied by a good wine or a cold beer. Also discover [**what you can see in Cortelazor**](/en/what-to-do) with a pleasant walk. The perfect end to an unforgettable route!
 
 ![Cortelazor la Real](/images/hiking/charco-malo.jpg)
 
-
-
-And after a day of hiking, there’s nothing better than enjoying the delicious gastronomy of the Sierra de Aracena in one of Cortelazor’s local bars. Taste traditional dishes such as Iberian ham, local cheese, and seasonal mushrooms, paired with a fine wine or an ice-cold beer. The perfect way to end an unforgettable hiking experience!
-
 ## Charco Malo
-a sdfasd fasdf asd fasd fasd fasd fasdf asd f</value>
+The **Charco Malo Route** is one of the most spectacular trails in the **Sierra de Aracena and Picos de Aroche**, leading us to an impressive waterfall that flows into a **deep pool** surrounded by a lush riverbank forest.
+
+The route, about 5 kilometers long and of medium-low difficulty, begins at the parking lots at the entrance to [**Cortelazor la Real**](/en). Following cobblestone paths and traditional trails, it ascends to a viewpoint with panoramic views of the mountains, then descends towards the **Arroyo de la Guijarra** ravine, where nature shows its wildest side. Although the route doesn't present major technical difficulties, there are very steep slopes that require caution, especially in downhill sections.
+
+The trail passes through a unique environment, with alders, poplars, ash trees, and Mediterranean vegetation that shelters rich fauna. Depending on the time of year, the route can be circular, but in some seasons it's necessary to retrace your steps, making it a linear route.
+
+&lt;iframe frameBorder="0" scrolling="no" src="https://es.wikiloc.com/wikiloc/embedv2.do?id=151856294&amp;elevation=on&amp;images=on&amp;maptype=H" width="100%" height="500"&gt;&lt;/iframe&gt;&lt;div style="color:#777;font-size:11px;line-height:16px;"&gt;Powered by&amp;nbsp;&lt;a style="color:#4C8C2B;font-size:11px;line-height:16px;" target="_blank" href="https://es.wikiloc.com"&gt;Wikiloc&lt;/a&gt;&lt;/div&gt;
+&lt;p&gt;&lt;/p&gt;
+
+## Circular Cortelazor - Navahermosa
+The **Circular Cortelazor - Navahermosa Route** is a trail that combines spectacular landscapes, lush forests, and the charm of mountain villages.
+
+The route begins at the entrance to [**Cortelazor la Real**](/en), ascending along the road towards **Los Marines**, then taking the **Fuenteheridos Path** on the right. Upon reaching the **Navalmanzano** summit, the panoramic views of the **Sierra del Castaño** to the south and the village of **Navahermosa** to the west offer an unparalleled landscape.
+
+From here, the path descends through dense forests to the village of **Navahermosa (Galaroza)**. After passing by its fountain, we take the **Navahermosa to Cortelazor Path**, which runs between stone walls, shrubs, and pine forests. The route continues up and down natural watercourses until connecting with a road suitable for vehicles.
+
+The final stretch takes us back to [**Cortelazor**](/en), entering through the **old public washing places**, a symbol of the [**tradition and history of the village**](/en/history).
+
+&lt;iframe frameBorder="0" scrolling="no" src="https://es.wikiloc.com/wikiloc/embedv2.do?id=151872225&amp;elevation=on&amp;images=on&amp;maptype=H" width="100%" height="500"&gt;&lt;/iframe&gt;&lt;div style="color:#777;font-size:11px;line-height:16px;"&gt;Powered by&amp;nbsp;&lt;a style="color:#4C8C2B;font-size:11px;line-height:16px;" target="_blank" href="https://es.wikiloc.com"&gt;Wikiloc&lt;/a&gt;&lt;/div&gt;
+&lt;p&gt;&lt;/p&gt;
+
+## Las Vaqueras Path
+The **Las Vaqueras Path** is a trail that runs through some of the most characteristic landscapes of [**Cortelazor la Real**](/en), combining valleys, streams, and historic paths.
+
+The route begins at the village entrance and, after crossing **Plaza de Andalucía**, we descend along the street next to the **Church of Nuestra Señora de los Remedios**. The path continues towards the **Barrial bridge** and, after crossing it, gently ascends until reaching the **Alto de la Barquera**. From here, the route descends towards the **Arroyo de la Guijarra**, offering spectacular views of the natural surroundings.
+
+We cross the road that connects **Los Marines** and [**Cortelazor**](/en) and take the **Vereda de Sevilla** (Livestock Trail) heading west. Finally, the route turns north along the **Fuenteheridos Path**, returning to [**Cortelazor la Real**](/en) after a journey full of contrasts and scenic beauty.
+
+&lt;iframe frameBorder="0" scrolling="no" src="https://es.wikiloc.com/wikiloc/embedv2.do?id=151865395&amp;elevation=on&amp;images=on&amp;maptype=H" width="100%" height="500"&gt;&lt;/iframe&gt;&lt;div style="color:#777;font-size:11px;line-height:16px;"&gt;Powered by&amp;nbsp;&lt;a style="color:#4C8C2B;font-size:11px;line-height:16px;" target="_blank" href="https://es.wikiloc.com"&gt;Wikiloc&lt;/a&gt;&lt;/div&gt;
+&lt;p&gt;&lt;/p&gt;
+
+## Hermitages Path Route
+The **Hermitages Path** is a trail loaded with [**history**](/en/history) and spirituality, connecting **ancient hermitages** and offering a journey through dehesa landscapes and forests typical of the **Sierra de Aracena and Picos de Aroche**.
+
+The route begins at the entrance to [**Cortelazor la Real**](/en), advancing northwards along narrow alleys until reaching the **Coronada picnic area**. From here, we follow the road towards **Hinojales** until reaching the **Hermitage of Nuestra Señora de la Coronada**, a **13th-century** temple that houses a valuable polychrome carving of the **16th-century Virgin**, an object of great popular devotion.
+
+Less than a kilometer away, we take a detour to the left and cross holm oak dehesas and eucalyptus forests, until connecting with the **Cordel de las Buervas**. Upon reaching the **Alto de la Buharda**, we turn south along the **Vereda de Sevilla**, which leads us to the **Hermitage of Divino Salvador**, now in the municipality of **Valdelarco**.
+
+From this point, we descend towards the center of **Valdelarco** and continue eastward, crossing a beautiful landscape of cork oaks and holm oaks, until returning to [**Cortelazor la Real**](/en) through its western entrance.
+
+&lt;iframe frameBorder="0" scrolling="no" src="https://es.wikiloc.com/wikiloc/embedv2.do?id=151860419&amp;elevation=on&amp;images=on&amp;maptype=H" width="100%" height="500"&gt;&lt;/iframe&gt;&lt;div style="color:#777;font-size:11px;line-height:16px;"&gt;Powered by&amp;nbsp;&lt;a style="color:#4C8C2B;font-size:11px;line-height:16px;" target="_blank" href="https://es.wikiloc.com"&gt;Wikiloc&lt;/a&gt;&lt;/div&gt;
+&lt;p&gt;&lt;/p&gt;
+
+## Path of the Pools
+The **Path of the Pools** is a circular route that allows you to discover some of the most picturesque corners of [**Cortelazor la Real**](/en), combining ancient cobblestone paths, traditional trails, and the charm of the mountain streams.
+
+The route begins at the entrance to the village and leads us to **Plaza de Andalucía**, next to the **Church of Nuestra Señora de los Remedios**. From here, we take the **Corterrangel Path**, flanked by stone walls during the first stretch. Later, the cobblestone path descends in a zigzag until reaching the **El Barrial Bridge**, where we cross a gate that must remain closed after we pass.
+
+The trail ascends to **Alto del Barrial**, where we turn northwest along the **Molino Path**. We descend between stone walls and wire fences until we reach the **Arroyo de la Guijarra**, at the height of the dam near the **Hinojales** road. To the right we find the recreational area of the **La Coronada Dam**, an ideal place to take a break and enjoy the surroundings.
+
+From here, we continue south along the **Cortelazor to Hinojales Path**, gradually ascending until we meet the road. Finally, we continue the climb until entering [**Cortelazor la Real**](/en) through the cemetery area, thus closing a route full of natural beauty and tradition.
+
+&lt;iframe frameBorder="0" scrolling="no" src="https://es.wikiloc.com/wikiloc/embedv2.do?id=151851121&amp;elevation=on&amp;images=on&amp;maptype=H" width="100%" height="500"&gt;&lt;/iframe&gt;&lt;div style="color:#777;font-size:11px;line-height:16px;"&gt;Powered by&amp;nbsp;&lt;a style="color:#4C8C2B;font-size:11px;line-height:16px;" target="_blank" href="https://es.wikiloc.com"&gt;Wikiloc&lt;/a&gt;&lt;/div&gt;</value>
   </data>
   <data name="Keywords" xml:space="preserve">
     <value>hiking in Cortelazor, hiking trails Sierra de Aracena, Charco Malo Cortelazor, hiking in Huelva, mountain trails Andalusia, Sierra de Aracena trails, nature in Cortelazor, hiking in the Sierra, walking routes Huelva, natural trails Cortelazor</value>
