Remove powered by wikiloc #86

--- a/src/ViveCortelazor/Resources/Views/Home/Hiking.en.resx
+++ b/src/ViveCortelazor/Resources/Views/Home/Hiking.en.resx
@@ -144,7 +144,7 @@ The route, about 5 kilometers long and of medium-low difficulty, begins at the p
 
 The trail passes through a unique environment, with alders, poplars, ash trees, and Mediterranean vegetation that shelters rich fauna. Depending on the time of year, the route can be circular, but in some seasons it's necessary to retrace your steps, making it a linear route.
 
-&lt;iframe frameBorder="0" scrolling="no" src="https://es.wikiloc.com/wikiloc/embedv2.do?id=151856294&amp;elevation=on&amp;images=on&amp;maptype=H" width="100%" height="500"&gt;&lt;/iframe&gt;&lt;div style="color:#777;font-size:11px;line-height:16px;"&gt;Powered by&amp;nbsp;&lt;a style="color:#4C8C2B;font-size:11px;line-height:16px;" target="_blank" href="https://es.wikiloc.com"&gt;Wikiloc&lt;/a&gt;&lt;/div&gt;
+&lt;iframe frameBorder="0" scrolling="no" src="https://es.wikiloc.com/wikiloc/embedv2.do?id=151856294&amp;elevation=on&amp;images=on&amp;maptype=H" width="100%" height="500"&gt;&lt;/iframe&gt;
 &lt;p&gt;&lt;/p&gt;
 
 ## Circular Cortelazor - Navahermosa
@@ -156,7 +156,7 @@ From here, the path descends through dense forests to the village of **Navahermo
 
 The final stretch takes us back to [**Cortelazor**](/en), entering through the **old public washing places**, a symbol of the [**tradition and history of the village**](/en/history).
 
-&lt;iframe frameBorder="0" scrolling="no" src="https://es.wikiloc.com/wikiloc/embedv2.do?id=151872225&amp;elevation=on&amp;images=on&amp;maptype=H" width="100%" height="500"&gt;&lt;/iframe&gt;&lt;div style="color:#777;font-size:11px;line-height:16px;"&gt;Powered by&amp;nbsp;&lt;a style="color:#4C8C2B;font-size:11px;line-height:16px;" target="_blank" href="https://es.wikiloc.com"&gt;Wikiloc&lt;/a&gt;&lt;/div&gt;
+&lt;iframe frameBorder="0" scrolling="no" src="https://es.wikiloc.com/wikiloc/embedv2.do?id=151872225&amp;elevation=on&amp;images=on&amp;maptype=H" width="100%" height="500"&gt;&lt;/iframe&gt;
 &lt;p&gt;&lt;/p&gt;
 
 ## Las Vaqueras Path
@@ -166,7 +166,7 @@ The route begins at the village entrance and, after crossing **Plaza de Andaluc√
 
 We cross the road that connects **Los Marines** and [**Cortelazor**](/en) and take the **Vereda de Sevilla** (Livestock Trail) heading west. Finally, the route turns north along the **Fuenteheridos Path**, returning to [**Cortelazor la Real**](/en) after a journey full of contrasts and scenic beauty.
 
-&lt;iframe frameBorder="0" scrolling="no" src="https://es.wikiloc.com/wikiloc/embedv2.do?id=151865395&amp;elevation=on&amp;images=on&amp;maptype=H" width="100%" height="500"&gt;&lt;/iframe&gt;&lt;div style="color:#777;font-size:11px;line-height:16px;"&gt;Powered by&amp;nbsp;&lt;a style="color:#4C8C2B;font-size:11px;line-height:16px;" target="_blank" href="https://es.wikiloc.com"&gt;Wikiloc&lt;/a&gt;&lt;/div&gt;
+&lt;iframe frameBorder="0" scrolling="no" src="https://es.wikiloc.com/wikiloc/embedv2.do?id=151865395&amp;elevation=on&amp;images=on&amp;maptype=H" width="100%" height="500"&gt;&lt;/iframe&gt;
 &lt;p&gt;&lt;/p&gt;
 
 ## Hermitages Path Route
@@ -178,7 +178,7 @@ Less than a kilometer away, we take a detour to the left and cross holm oak dehe
 
 From this point, we descend towards the center of **Valdelarco** and continue eastward, crossing a beautiful landscape of cork oaks and holm oaks, until returning to [**Cortelazor la Real**](/en) through its western entrance.
 
-&lt;iframe frameBorder="0" scrolling="no" src="https://es.wikiloc.com/wikiloc/embedv2.do?id=151860419&amp;elevation=on&amp;images=on&amp;maptype=H" width="100%" height="500"&gt;&lt;/iframe&gt;&lt;div style="color:#777;font-size:11px;line-height:16px;"&gt;Powered by&amp;nbsp;&lt;a style="color:#4C8C2B;font-size:11px;line-height:16px;" target="_blank" href="https://es.wikiloc.com"&gt;Wikiloc&lt;/a&gt;&lt;/div&gt;
+&lt;iframe frameBorder="0" scrolling="no" src="https://es.wikiloc.com/wikiloc/embedv2.do?id=151860419&amp;elevation=on&amp;images=on&amp;maptype=H" width="100%" height="500"&gt;&lt;/iframe&gt;
 &lt;p&gt;&lt;/p&gt;
 
 ## Path of the Pools
@@ -190,7 +190,7 @@ The trail ascends to **Alto del Barrial**, where we turn northwest along the **M
 
 From here, we continue south along the **Cortelazor to Hinojales Path**, gradually ascending until we meet the road. Finally, we continue the climb until entering [**Cortelazor la Real**](/en) through the cemetery area, thus closing a route full of natural beauty and tradition.
 
-&lt;iframe frameBorder="0" scrolling="no" src="https://es.wikiloc.com/wikiloc/embedv2.do?id=151851121&amp;elevation=on&amp;images=on&amp;maptype=H" width="100%" height="500"&gt;&lt;/iframe&gt;&lt;div style="color:#777;font-size:11px;line-height:16px;"&gt;Powered by&amp;nbsp;&lt;a style="color:#4C8C2B;font-size:11px;line-height:16px;" target="_blank" href="https://es.wikiloc.com"&gt;Wikiloc&lt;/a&gt;&lt;/div&gt;</value>
+&lt;iframe frameBorder="0" scrolling="no" src="https://es.wikiloc.com/wikiloc/embedv2.do?id=151851121&amp;elevation=on&amp;images=on&amp;maptype=H" width="100%" height="500"&gt;&lt;/iframe&gt;</value>
   </data>
   <data name="Keywords" xml:space="preserve">
     <value>hiking in Cortelazor, hiking trails Sierra de Aracena, Charco Malo Cortelazor, hiking in Huelva, mountain trails Andalusia, Sierra de Aracena trails, nature in Cortelazor, hiking in the Sierra, walking routes Huelva, natural trails Cortelazor</value>
