--- a/src/ViveCortelazor/Resources/Views/Home/Hiking.es.resx
+++ b/src/ViveCortelazor/Resources/Views/Home/Hiking.es.resx
@@ -144,7 +144,7 @@ El recorrido, de unos 5 kilómetros y dificultad media-baja, comienza en los apa
 
 El sendero atraviesa un entorno único, con alisos, chopos, fresnos y vegetación mediterránea que cobija una rica fauna. Dependiendo de la época del año, la ruta puede hacerse circular, pero en algunas estaciones es necesario desandar el camino y hacerla de forma lineal.
 
-&lt;iframe frameBorder="0" scrolling="no" src="https://es.wikiloc.com/wikiloc/embedv2.do?id=151856294&amp;elevation=on&amp;images=on&amp;maptype=H" width="100%" height="500"&gt;&lt;/iframe&gt;&lt;div style="color:#777;font-size:11px;line-height:16px;"&gt;Powered by&amp;nbsp;&lt;a style="color:#4C8C2B;font-size:11px;line-height:16px;" target="_blank" href="https://es.wikiloc.com"&gt;Wikiloc&lt;/a&gt;&lt;/div&gt;
+&lt;iframe frameBorder="0" scrolling="no" src="https://es.wikiloc.com/wikiloc/embedv2.do?id=151856294&amp;elevation=on&amp;images=on&amp;maptype=H" width="100%" height="500"&gt;&lt;/iframe&gt;
 &lt;p&gt;&lt;/p&gt;
 
 ## Circular Cortelazor - Navahermosa
@@ -156,7 +156,7 @@ Desde aquí, el camino desciende entre densos bosques hasta la aldea de **Navahe
 
 El tramo final nos lleva de regreso a [**Cortelazor**](/es), entrando por los **antiguos lavaderos públicos**, un símbolo de la [**tradición y la historia del pueblo**](/es/historia).
 
-&lt;iframe frameBorder="0" scrolling="no" src="https://es.wikiloc.com/wikiloc/embedv2.do?id=151872225&amp;elevation=on&amp;images=on&amp;maptype=H" width="100%" height="500"&gt;&lt;/iframe&gt;&lt;div style="color:#777;font-size:11px;line-height:16px;"&gt;Powered by&amp;nbsp;&lt;a style="color:#4C8C2B;font-size:11px;line-height:16px;" target="_blank" href="https://es.wikiloc.com"&gt;Wikiloc&lt;/a&gt;&lt;/div&gt;
+&lt;iframe frameBorder="0" scrolling="no" src="https://es.wikiloc.com/wikiloc/embedv2.do?id=151872225&amp;elevation=on&amp;images=on&amp;maptype=H" width="100%" height="500"&gt;&lt;/iframe&gt;
 &lt;p&gt;&lt;/p&gt;
 
 ## Camino de las Vaqueras
@@ -166,7 +166,7 @@ La ruta comienza en la entrada del pueblo y, tras atravesar la **Plaza de Andalu
 
 Cruzamos la carretera que une **Los Marines** y [**Cortelazor**](/es) y tomamos la **Vereda de Sevilla** (Vía Pecuaria) en dirección oeste. Finalmente, la ruta gira al norte por el **Camino de Fuenteheridos**, regresando a [**Cortelazor la Real**](/es) tras un recorrido lleno de contrastes y belleza paisajística.
 
-&lt;iframe frameBorder="0" scrolling="no" src="https://es.wikiloc.com/wikiloc/embedv2.do?id=151865395&amp;elevation=on&amp;images=on&amp;maptype=H" width="100%" height="500"&gt;&lt;/iframe&gt;&lt;div style="color:#777;font-size:11px;line-height:16px;"&gt;Powered by&amp;nbsp;&lt;a style="color:#4C8C2B;font-size:11px;line-height:16px;" target="_blank" href="https://es.wikiloc.com"&gt;Wikiloc&lt;/a&gt;&lt;/div&gt;
+&lt;iframe frameBorder="0" scrolling="no" src="https://es.wikiloc.com/wikiloc/embedv2.do?id=151865395&amp;elevation=on&amp;images=on&amp;maptype=H" width="100%" height="500"&gt;&lt;/iframe&gt;
 &lt;p&gt;&lt;/p&gt;
 
 ## Ruta del Camino de las Ermitas
@@ -178,7 +178,7 @@ A menos de un kilómetro, tomamos un desvío a la izquierda y atravesamos dehesa
 
 Desde este punto, descendemos hacia el núcleo de **Valdelarco** y continuamos en dirección este, atravesando un hermoso paisaje de alcornoques y encinas, hasta regresar a [**Cortelazor la Real**](/es) por su entrada occidental.
 
-&lt;iframe frameBorder="0" scrolling="no" src="https://es.wikiloc.com/wikiloc/embedv2.do?id=151860419&amp;elevation=on&amp;images=on&amp;maptype=H" width="100%" height="500"&gt;&lt;/iframe&gt;&lt;div style="color:#777;font-size:11px;line-height:16px;"&gt;Powered by&amp;nbsp;&lt;a style="color:#4C8C2B;font-size:11px;line-height:16px;" target="_blank" href="https://es.wikiloc.com"&gt;Wikiloc&lt;/a&gt;&lt;/div&gt;
+&lt;iframe frameBorder="0" scrolling="no" src="https://es.wikiloc.com/wikiloc/embedv2.do?id=151860419&amp;elevation=on&amp;images=on&amp;maptype=H" width="100%" height="500"&gt;&lt;/iframe&gt;
 &lt;p&gt;&lt;/p&gt;
 
 ## Camino de los Charcos
@@ -190,7 +190,7 @@ El sendero asciende hasta el **Alto del Barrial**, donde giramos hacia el noroes
 
 Desde aquí, seguimos hacia el sur por el **Camino de Cortelazor a Hinojales**, ascendiendo progresivamente hasta encontrarnos con la carretera. Finalmente, continuamos la subida hasta entrar en [**Cortelazor la Real**](/es) por la zona del cementerio, cerrando así una ruta llena de belleza natural y tradición.
 
-&lt;iframe frameBorder="0" scrolling="no" src="https://es.wikiloc.com/wikiloc/embedv2.do?id=151851121&amp;elevation=on&amp;images=on&amp;maptype=H" width="100%" height="500"&gt;&lt;/iframe&gt;&lt;div style="color:#777;font-size:11px;line-height:16px;"&gt;Powered by&amp;nbsp;&lt;a style="color:#4C8C2B;font-size:11px;line-height:16px;" target="_blank" href="https://es.wikiloc.com"&gt;Wikiloc&lt;/a&gt;&lt;/div&gt;</value>
+&lt;iframe frameBorder="0" scrolling="no" src="https://es.wikiloc.com/wikiloc/embedv2.do?id=151851121&amp;elevation=on&amp;images=on&amp;maptype=H" width="100%" height="500"&gt;&lt;/iframe&gt;</value>
   </data>
   <data name="Keywords" xml:space="preserve">
     <value>senderismo en Cortelazor, rutas de senderismo Sierra de Aracena, Charco Malo Cortelazor, senderismo Huelva, rutas de montaña Andalucía, senderos Sierra de Aracena, naturaleza Cortelazor, senderismo en la Sierra, caminatas Huelva, rutas naturales Cortelazor</value>
