--- a/src/ViveCortelazor/Resources/Views/Blog/Blog.en.resx
+++ b/src/ViveCortelazor/Resources/Views/Blog/Blog.en.resx
@@ -117,10 +117,19 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Description" xml:space="preserve">
+    <value>Discover the latest news, events, and curiosities from Cortelazor la Real. Stay updated on life in this beautiful village in the Sierra de Aracena.</value>
+  </data>
+  <data name="Keywords" xml:space="preserve">
+    <value>Cortelazor, Cortelazor news, Cortelazor blog, Cortelazor events, Sierra de Aracena, rural tourism, culture, tradition, updates, Vive Cortelazor</value>
+  </data>
   <data name="Next" xml:space="preserve">
     <value>Next</value>
   </data>
   <data name="Previous" xml:space="preserve">
     <value>Previous</value>
+  </data>
+  <data name="Title" xml:space="preserve">
+    <value>Blog &amp; News</value>
   </data>
 </root>
