--- a/src/ViveCortelazor/Resources/Views/Home/Index.en.resx
+++ b/src/ViveCortelazor/Resources/Views/Home/Index.en.resx
@@ -140,6 +140,9 @@ If you're looking for an authentic experience in contact with nature, [**history
   <data name="Keywords" xml:space="preserve">
     <value>Cortelazor la Real, Sierra de Aracena, Travel to Cortelazor, Villages of the Sierra de Aracena, Rural tourism in Cortelazor, Nature in Cortelazor, Hiking in the Sierra de Aracena, Gastronomy of Cortelazor, Historical heritage of Cortelazor, What to see in Cortelazor, Accommodation in Cortelazor, Culture of the Sierra de Aracena, Outdoor activities in Cortelazor, Hiking routes in the Sierra de Aracena, Hiking routes in Cortelazor, Huelva villages, Andalusia, Andalusia villages</value>
   </data>
+  <data name="Latest posts" xml:space="preserve">
+    <value>Latest posts</value>
+  </data>
   <data name="Title" xml:space="preserve">
     <value>Discover Cortelazor la Real, a charming gem in the Sierra de Aracena</value>
   </data>
