--- a/src/ViveCortelazor/Resources/Views/Home/Index.es.resx
+++ b/src/ViveCortelazor/Resources/Views/Home/Index.es.resx
@@ -140,6 +140,9 @@ Si buscas una experiencia auténtica en contacto con la naturaleza, la [**histor
   <data name="Keywords" xml:space="preserve">
     <value>Cortelazor la Real, Sierra de Aracena, Viajar a Cortelazor, Pueblos de la Sierra de Aracena, Turismo rural en Cortelazor, Naturaleza en Cortelazor, Senderismo en la Sierra de Aracena, Gastronomía de Cortelazor, Patrimonio histórico de Cortelazor, Qué ver en Cortelazor, Alojamiento en Cortelazor, Cultura de la Sierra de Aracena, Actividades al aire libre en Cortelazor, Rutas de senderismo en la Sierra de Aracena, Rutas de senderismo en Cortelazor, pueblos de Huelva, Andalucía, pueblos de Andalucía</value>
   </data>
+  <data name="Latest posts" xml:space="preserve">
+    <value>Últimos posts</value>
+  </data>
   <data name="Title" xml:space="preserve">
     <value>Descubre Cortelazor la Real, un rincón con encanto en la Sierra de Aracena</value>
   </data>
